@@ -47,13 +47,30 @@ div.archived p
              </div>
 
             <metal:main define-macro="main">
-             <div id="" class="flashmovie"
+             
+              <tal:gis define="uid here/getArcGisUID|nothing;
+                                  arcgis_url here/arcgis_url|nothing" >
+                 <tal:block condition="uid">
+                 <iframe  width="940" height="600" 
+                      frameborder="0" scrolling="no" 
+                      marginheight="0" marginwidth="0" 
+                      tal:attributes="src python:'http://eea.maps.arcgis.com/home/webmap/templates/OnePane/basicviewer/embed.html?webmap=%s&amp;gcsextent=-41.8394,29.8481,65.6508,72.2113&amp;displayslider=true&amp;displayscalebar=true&amp;displaylegend=true&amp;displaysearch=true&amp;displaybasemaps=true' % (uid)"
+                      src="">
+                 </iframe>
+                 <br />
+                 <small><a href="" tal:attributes="href python:'%s&amp;extent=-41.8394,29.8481,65.6508,72.2113' % (arcgis_url)" style="color:#0000FF;text-align:left" target="_blank">View Larger Map</a></small>
+                 </tal:block>
+                 
+             <tal:block condition="not:uid">    
+               <div id="" class="flashmovie"
                 tal:attributes="id string:container-${here/getId};"> This page requires Flashplayer, please download it for free from <a href="http://www.macromedia.com/go/getflashplayer" title="get flashplayer">http://www.macromedia.com/go/getflashplayer</a> </div>
 
-             <tal:flashjs replace="structure here/flash_js" />
-
-             <h2>Full screen</h2>
-             <p>If the map application above does not provide an integrated full screen feature (usually in the upper right corner), then you can try with the following <a href="#" tal:attributes="href here/gis_view_remote_url" title="Full screen mode">full screen mode</a></p>
+               <tal:flashjs replace="structure here/flash_js" />
+               <h2>Full screen</h2>
+               <p>If the map application above does not provide an integrated full screen feature (usually in the upper right corner), then you can try with the following <a href="#" tal:attributes="href here/gis_view_remote_url" title="Full screen mode">full screen mode</a></p> 
+              </tal:block>  
+                 
+              </tal:gis>
             </metal:main>
     </metal:fill>
 
